# leda

./: Cargo.toml  README.md
examples/: readme.rs
src/: gemini.rs  lib.rs  py_bindings.rs
src/gemini/: client.rs  error.rs  gemtext.rs  header.rs  mod.rs  response.rs  util.rs
