[package]
name = "leda"
version = "0.1.0"
edition = "2021"

[lib]
name = "leda"
crate-type = ["lib", "cdylib"]

[features]
py_bindings = ["pyo3"]

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
url = "2.2.2"
thiserror = "1.0.30"
pyo3 = { version = "0.15.1", features = ["extension-module"], optional = true }