[package]
name = "leda"
version = "0.4.2"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A gemini client backend"

[lib]
name = "leda"
crate-type = ["lib", "cdylib"]

[features]
async = ["dep:async-rustls", "dep:async-std"]

[dependencies]
rustls = { version = "0.20.6", features = ["dangerous_configuration"] }
url = "2.2.2"
thiserror = "1.0.30"
async-rustls = { version = "0.3.0", optional = true }
async-std = { version = "1.12.0", optional = true }
